<resources>
    <string name="app_name">CryptoThat</string>
    <string name="LogoBannerDescription">Logo Banner</string>
    <string name="UsernameHintText">Username</string>
    <string name="PasswordHintText">Password</string>
    <string name="PasswordConfirmationHintText">Confirm Password</string>
    <string name="EmailHintText">Email</string>
    <string name="login_LoginButtonText">Login</string>
    <string name="login_RegisterButtonText">Register</string>
    <string name="login_RegisteredQuestionLabel">New Here?</string>
    <string name="register_ReturnToLoginButtonText">Back</string>
    <string name="register_RegisterButtonText">Register</string>
    <string name="login_PasswordForgotLabel">Forgot your password?</string>
    <string name="forgotPassword_EmailSubmitTitleText">Forgot Password?</string>
    <string name="forgotPassword_EmailSubmitDescriptionText">Please enter the email address for
        your account.</string>
    <string name="forgotPassword_EmailHint">Email</string>
    <string name="forgotPassword_SubmitButtonText">Send Email</string>
    <string name="home_SettingButtonDescription">Settings</string>
    <string name="home_MessageButtonText">Messages</string>
    <string name="home_CipherButtonText">Ciphers</string>
    <string name="TempString">Temp Test</string>
    <string name="forgotPassword_backButton">Back</string>
    <string name="profileSetup_ProfileImageDescription">Profile Image</string>
    <string name="profileSetup_ChangePassword">Change Password</string>
    <string name="profileSetup_ChangeEmail">Change Email</string>
    <string name="profileSetup_ReturnButton">Back</string>
    <string name="profileSetup_VerifyButton">Verify Email</string>
    <string name="profileSetup_ChangeUserName">Change Username</string>
    <string name="profileSetup_ChangeProfileImage">Change Image</string>
    <string name="home_LogoutButton">Logout</string>
    <string name="changeEmailPopup_LabelText">New Email:</string>
    <string name="changeEmailPopup_Hint">example@email.com</string>
    <string name="changeEmailPopup_SubmitButton">Submit</string>
    <string name="reLoginPopup_TitleText">Relogin</string>
    <string name="reLoginPopup_LoginButton">Login</string>
    <string name="changeUsernamePopup_Hint">Starfish123</string>
    <string name="changeUsernamePopup_LabelText">New Username:</string>
    <string name="contactsFragment_UserSearchBarHint">Search for User</string>
    <string name="contactsFragment_ContactSearchBarHint">Search for Contact</string>
    <string name="contactsFragment_SearchImageDescription">Search</string>
    <string name="contactFragment_UserSwitchButton">Users</string>
    <string name="contactFragment_ContactSwitchButton">Contacts</string>
    <string name="contactData_Avatar">Avatar</string>
    <string name="messageRow_AvatarDescription">avatar</string>
    <string name="message_ConstructMessageButton">Create Message</string>
    <string name="message_BackToHomeButton">Home</string>
    <string name="encipherMessage_CipherNameLabel">Cipher:</string>
    <string name="encipherMessage_KeyLabel">Key:</string>
    <string-array name="temp_values">
        <item>test</item>
        <item>temp</item>
        <item>tiitemmkslcnwlanldvlekmfmsmcvkamefmmlflsdkmcsmffee</item>
    </string-array>
    <string name="encipher_CipherTextHint">Cipher Text</string>
    <string name="encipher_PlainTextHint">Plain Text</string>
    <string name="selectOne">(Select One)</string>
    <string name="encipherKey_Error">Not a Valid Key</string>
    <string name="encipherMessage_KeyInputHint">Key</string>
    <string name="encipherMessage_TopTextWrapperEmptyKey">You need a valid key to enter message.</string>
    <string name="encipherMessage_TopTextWrapperInvalidKey">Your key is invalid read the cipher description to get the proper format for the key.</string>
    <string name="encipherMessage_BackButton">Back</string>
    <string name="encipherMessage_SendButton">Send</string>
    <string name="decipherMessage_BackButton">Back</string>
    <string name="decipherMessage_KeyInputHint">Key</string>
    <string name="decipherMessage_KeyError">Not a Valid Key</string>
    <string name="decipherMessage_TopTextWrapperEmptyKey">You need a valid key to enter cipher text.</string>
    <string name="decipherMessage_TopTextWrapperInvalidKey">Your key is invalid read the cipher description to get the proper format for the key.</string>
    <string name="decipherMessage_CipherTextHint">Cipher Text</string>
    <string name="decipherMessage_PlainTextHint">Plain Text</string>
    <string name="decipherMessage_CipherNameLabel">Cipher:</string>
    <string name="decipherMessage_KeyLabel">Key:</string>
</resources>
