<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ForgotPasswordSubmitEmailFragment">

    <TextView
        android:id="@+id/forgotPassword_EmailSubmitTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/forgotPassword_EmailSubmitTitleText"
        android:textColor="@color/forgotPassword_TitleColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPassword_EmailSubmitDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/forgotPassword_EmailSubmitDescriptionText"
        android:textColor="@color/forgotPassword_DescriptionColor" />

    <EditText
        android:id="@+id/forgotPassword_EmailEntryField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/forgotPassword_EmailHint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/forgotPassword_EmailSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgotPassword_SubmitButtonText" />

    <Button
        android:id="@+id/forgotPassword_ReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgotPassword_backButton" />
</LinearLayout>