<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/register_Banner"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:contentDescription="@string/LogoBannerDescription"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/placeholder" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:elevation="1dp">

        <LinearLayout
            android:id="@+id/register_ReturnLoginButtonField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingEnd="25dp"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/register_ReturnToLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:text="@string/register_ReturnToLoginButtonText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_UsernamePasswordEmailRegisterField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/register_EmailTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/EmailHintText"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/register_UsernameTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/UsernameHintText"
                android:inputType="text" />

            <EditText
                android:id="@+id/register_PasswordTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/PasswordHintText"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_PasswordConfirmationTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/PasswordConfirmationHintText"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginBottom="10dp"
                android:text="@string/register_RegisterButtonText"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>