<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/changeUsernamePopup_LabelText"
            android:textColor="@color/forgotPassword_TitleColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/changeUsernamePopup_UsernameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/changeUsernamePopup_Hint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/changeUsernamePopup_SubmitButton"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/changeEmailPopup_SubmitButton"/>
</LinearLayout>