<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/login_Banner"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:contentDescription="@string/LogoBannerDescription"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/placeholder" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/login_EmailPasswordLoginField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/login_EmailTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/EmailHintText"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_PasswordTextEntry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/PasswordHintText"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_LoginButtonText" />

            <TextView
                android:id="@+id/login_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/login_PasswordForgotLabel"
                android:textColor="@color/login_ForgotPasswordLabel" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_RegisterButtonField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="25dp"
            android:paddingStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/login_RegisteredQuestionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="2dp"
                android:text="@string/login_RegisteredQuestionLabel"
                android:textColor="@color/login_RegisterLabelColor"
                app:layout_constraintBottom_toTopOf="@+id/login_RegisterButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/login_RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_RegisterButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.945"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
