<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EncipherMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cipherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/encipherMessage_CipherNameLabel"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Spinner
                android:id="@+id/encipher_CipherNameSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/keyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/encipherMessage_KeyLabel"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/encipherMessage_InputTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp">

            <EditText
                android:id="@+id/encipher_KeyInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/encipherMessage_KeyInputHint"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/encipherMessage_PlainTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="0dp">

        <EditText
            android:id="@+id/encipherMessage_TopMessageField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:fadeScrollbars="true"
            android:gravity="top"
            android:hint="@string/encipher_PlainTextHint"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:lines="9"
            android:overScrollMode="never"
            android:padding="5dp"
            android:scrollY="?android:attr/scrollbarSize"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:verticalScrollbarPosition="right" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/encipherMessage_BottomMessageField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/transparentBackground"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/encipher_CipherTextHint"
        android:inputType="none"
        android:isScrollContainer="true"
        android:lines="9"
        android:overScrollMode="never"
        android:padding="5dp"
        android:scrollbarThumbVertical="?android:attr/scrollbarThumbVertical"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/encipherMessage_backButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/encipherMessage_BackButton"/>

        <Button
            android:id="@+id/encipherMessage_sendButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/encipherMessage_SendButton"/>
    </LinearLayout>

</LinearLayout>